--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 html {
     font-size: 62.5%;
 }
+
+body {
+    font-size: 1.6rem;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.5;
+    color: #333;
+    background-color: #f4f4f4;
+    width: 100%;
+}
