update css file

--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,9 @@ body {
     background-color: #f4f4f4;
     width: 100%;
 }
+
+.devops {
+    background-color: #fff;
+    font-size: large;
+    
+}
