feat102/add css file

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,7 @@ body {
 
 .devops {
     background-color: #fff;
-    font-size: large;
-    color: #333;
-    background-repeat: no-repeat;
     display: flex;
-
+    size: 100px;
+    border-radius: 200px;
 }
